--- a/transform/dependencies.properties
+++ b/transform/dependencies.properties
@@ -1,4 +1,4 @@
 # Leave here for the publication process to detect if amf-transform has to be published!
 # Because we publish a version of amf-transform for each version of amf-client publish.
-amf.apicontract=5.6.0-SNAPSHOT
-amf.rdf=6.6.0-SNAPSHOT
+amf.apicontract=5.5.3-RC.0
+amf.rdf=6.5.3-RC.0
