W-17016391: Update test for amf-metadata

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -279,6 +279,10 @@ nodeMappings:
         propertyTerm: apiContract.endpoint
         range: EndPoint
         allowMultiple: true
+      webhooks:
+        propertyTerm: apiContract.webhooks
+        range: EndPoint
+        allowMultiple: true
       security:
         propertyTerm: security.security
         range: SecurityRequirement
