W-14661042 - Update goldens due OAS 3.1 related model changes

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -2137,6 +2137,9 @@ nodeMappings:
       name:
         propertyTerm: core.name
         range: string
+      identifier:
+        propertyTerm: core.identifier
+        range: string
       designAnnotations:
         propertyTerm: doc.designAnnotation
         range: DomainExtension
