W-10548360 - Update due new OAS 3.1 MutualTLS model

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -2468,6 +2468,16 @@ nodeMappings:
         allowMultiple: true
 
 
+  MutualTLSSettings:
+    classTerm: security.MutualTLSSettings
+    extends: Settings
+    mapping:
+      scope:
+        propertyTerm: security.scope
+        range: Scope
+        allowMultiple: true
+
+
   NamedExampleFragment:
     classTerm: apiContract.NamedExampleFragment
     extends: Fragment
