W-10548352 - Added SchemaObject OAS 3.1 entry

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -786,6 +786,9 @@ nodeMappings:
       comment:
         propertyTerm: core.comment
         range: string
+      SchemaVersion:
+        propertyTerm: raml-shapes.schemaVersion
+        range: string
       examples:
         propertyTerm: apiContract.examples
         range: Example
